--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
         background-color: #eee !important;
         border: 0 !important;
       }
+      tbody tr:nth-child(6) td tbody tr td:last-child {
+        background-color: #eee !important;
+        border: 0 !important;
+        white-space: normal !important;
+      }
+      td {
+        max-width: 320px !important;
+      }
       #botao {
         padding: 5px;
         margin-bottom: 10px;
@@ -146,9 +154,9 @@
           "Carisma": { minimo: 3, maximo: 18 },
           ajustes: {},
           detalhes: [],
-          altura: { minimo: 1.50, maximo: 1.90 },
-          idade: { minimo: 15, maximo: 80 },
-          peso: { minimo: 60, maximo: 90 },
+          altura: { "Masculino": { minimo: 1.52, maximo: 2.02 }, "Feminino": { minimo: 1.5, maximo: 2.0 }},
+          idade: { minimo: 15, maximo: 130 },
+          peso: { "Masculino": { minimo: 70, maximo: 100 }, "Feminino": { minimo: 50, maximo: 80 }},
           linguas_importantes: [ "comum" ],
           linguas: []
         },
@@ -163,13 +171,19 @@
           detalhes: [
             'Possuem um bônus de resistência (+1 para cada 3½ pontos de Constituição) contra ataques de varinhas de condão, bastão mágicos, cajados e outras magias.',
             'Possuem resistência excepcional a substâncias tóxicas. Seus testes de resistência contra veneno possuem bônus +1 para cada 3½ pontos de Constituição.',
-            'Itens mágicos que não forem especificamente compatíveis com a classe do personagem têm 20% de chance falhar quando usados por um anão. O teste de falha aplica-se a bastões, varinhas, anéis, amuletos, poções, trombetas e todos os outros tipos de ltens mágicos, exceto armas, escudos, armaduras, manoplas e faixas. Esta penalidade não se aplica a anões clérigos usando itens de sua classe.',
+            'Itens mágicos que não forem especificamente compatíveis com a classe do personagem têm 20% de chance falhar quando usados por um anão. O teste de falha aplica-se a bastões, varinhas, anéis, amuletos, poções, trombetas e todos os outros tipos de ltens mágicos, exceto armas, escudos, armaduras, manoplas e faixas. Esta penalidade não se aplica a anões clérigos usando itens de sua classe. Se falhar, é possível perceber se o item é amaldiçoado.',
             'Em combate corpo a corpo, os anões adicionam 1 à jogada de ataque feita contra ogros, meio-ogros, goblins e robgoblins.',
-            'Quando ogros, trolls, ogros magos, gigantes ou titãs atacam os anões, estes monstros precisam subtrair 4 pontos de suas jogadas de ataque.'
+            'Quando ogros, trolls, ogros magos, gigantes ou titãs atacam os anões, estes monstros precisam subtrair 4 pontos de suas jogadas de ataque.',
+            'A infravisão dos anões tem um alcance de 20 metros no escuro.',
+            'Estando a 3 metros, o Anão pode detectar (1-5 em 1d6) desnível ou Inclinação numa passagem.',
+            'Estando a 3 metros, o Anão pode detectar (1-5 em 1d6) novo túnel/construção de passagem.',
+            'Estando a 3 metros, o Anão pode detectar (1-4 em 1d6) deslizamento/deslocamento de paredes ou salas.',
+            'Estando a 3 metros, o Anão pode detectar (1-3 em 1d6) armadilhas de pedra, fossos e fossos camuflados.',
+            'O Anão pode determinar (1-3 em 1d6) profundidade aproximada em relação à superficie.'
           ],
-          altura: { minimo: 1.30, maximo: 1.45 },
-          idade: { minimo: 30, maximo: 350 },
-          peso: { minimo: 60, maximo: 100 },
+          altura: { "Masculino": { minimo: 1.09, maximo: 1.33 }, "Feminino": { minimo: 1.04, maximo: 1.28 }},
+          idade: { minimo: 40, maximo: 450 },
+          peso: { "Masculino": { minimo: 65, maximo: 85 }, "Feminino": { minimo: 52, maximo: 72 }},
           linguas_importantes: [ "comum", "dos anões" ],
           linguas: [ "dos gnomos", "dos goblins", "dos kobolds", "dos ogros" ]
         },
@@ -181,12 +195,20 @@
           "Sabedoria": { minimo: 3, maximo: 18 },
           "Carisma": { minimo: 8, maximo: 18 },
           ajustes: { "Destreza": 1, "Constituição": -1 },
-          detalhes: [],
-          altura: { minimo: 1.60, maximo: 1.80 },
-          idade: { minimo: 100, maximo: 1400 },
-          peso: { minimo: 50, maximo: 70 },
-          linguas_importantes: [ "comum" ],
-          linguas: []
+          detalhes: [
+            'Elfos têm 90% de proteção contra magias relacionadas ao sono e magias de Encantar.',
+            'Quando utilizam um arco de qualquer tipo (mas não bestas) ou quando empregam espadas (curtas ou longas) os elfos ganham um bônus de +1 em suas jogadas de ataque.',
+            'Um elfo pode obter bônus de Surpresa contra seus oponentes, mas somente se não estiver usando armadura de metal. Mesmo assim, o elfo precisa estar sozinho, ou num grupo formado só de elfos ou halflings (que também não podem usar armaduras de metal), ou, no mínimo, a 30 metros de seus companheiros para ganhar o bônus. Se o elfo cumprir essas condições, os oponentes sofrerão uma penalidade de -4 em testes de Surpresa. Se uma porta ou um obstáculo precisar ser transposto, a penalidade reduz-se para -2.',
+            'A infravisão permite aos elfos enxergar a 20 metros no escuro.',
+            'Se estiver a 3 mestros, elfos podem localizar (1 em 1d6) portas ocultas (escondidas por uma tela, cortina ou algo parecido).',
+            'Se procurar intencionalmente por uma porta secreta (construidas para não serem notadas), o elfo terá uma chance de 1-2 em 1d6 de encontrá-la.',
+            'Se procurar intencionalmente por uma porta oculta (escondidas por uma tela, cortina ou algo parecido), o elfo terá uma chance de 1-3 em 1d6 de encontrá-la.'
+          ],
+          altura: { "Masculino": { minimo: 1.4, maximo: 1.64 }, "Feminino": { minimo: 1.27, maximo: 1.51 }},
+          idade: { minimo: 100, maximo: 750 },
+          peso: { "Masculino": { minimo: 45, maximo: 61 }, "Feminino": { minimo: 35, maximo: 51 }},
+          linguas_importantes: [ "comum", 'élfico' ],
+          linguas: [ 'dos gnomos', 'dos halflings', 'dos goblins', 'dos robgoblins', 'dos orcs', 'dos gnolls' ]
         },
         "Gnomo": {
           "Força": { minimo: 6, maximo: 18 },
@@ -196,12 +218,22 @@
           "Sabedoria": { minimo: 3, maximo: 18 },
           "Carisma": { minimo: 3, maximo: 18 },
           ajustes: { "Inteligência": 1, "Sabedoria": -1 },
-          detalhes: [],
-          altura: { minimo: 1.10, maximo: 1.40 },
-          idade: { minimo: 30, maximo: 350 },
-          peso: { minimo: 30, maximo: 50 },
-          linguas_importantes: [ "comum" ],
-          linguas: []
+          detalhes: [
+            'Possuem um bônus de resistência (+1 para cada 3½ pontos de Constituição) contra ataques de varinhas de condão, bastão mágicos, cajados e outras magias.',
+            'Gnomos têm 20% de chance de falhar toda vez que usam itens mágicos, exceto armas, armaduras, escudos, instrumentos de ilusionismo e (se o personagem é um ladrão) instrumentos que concedam ou aumentem os talentos para o roubo. Se falhar, é possível perceber se o item é amaldiçoado.',
+            'Em corpo a corpo, o personagem gnomo soma 1 à sua jogada de ataque para acertar kobolds ou goblins.',
+            'Quando ogros, trolls, ogros magos, gigantes ou titãs atacam os gnomos, estes monstros precisam subtrair 4 pontos de suas jogadas de ataque.',
+            'A infravisão permite aos gnomos enxergar a 20 metros no escuro.',
+            'Estando a 3 metros, o gnomo pode detectar (1-5 em 1d6) desnível ou Inclinação numa passagem.',
+            'Estando a 3 metros, o gnomo pode detectar (1-7 em 1d10) paredes, teto e piso perigosos.',
+            'O gnomo pode determinar (1-3 em 1d6) direção aproximada no subsolo.',
+            'O gnomo pode determinar (1-4 em 1d6) profundidade aproximada em relação à superficie.'
+          ],
+          altura: { "Masculino": { minimo: 0.97, maximo: 1.13 }, "Feminino": { minimo: 0.91, maximo: 1.07 }},
+          idade: { minimo: 60, maximo: 500 },
+          peso: { "Masculino": { minimo: 36, maximo: 56 }, "Feminino": { minimo: 34, maximo: 54 }},
+          linguas_importantes: [ "comum", "dos gnomos" ],
+          linguas: [ "dos anões", "dos halflings", "dos goblins", "dos kobolds", "linguagem simples dos mamíferos que vivem em tocas (esquilos terrestres, texugos, musaranhos, doninhas, etc.)" ]
         },
         "Meio-Elfo": {
           "Força": { minimo: 3, maximo: 18 },
@@ -211,12 +243,17 @@
           "Sabedoria": { minimo: 3, maximo: 18 },
           "Carisma": { minimo: 3, maximo: 18 },
           ajustes: {},
-          detalhes: [],
-          altura: { minimo: 1.60, maximo: 1.80 },
-          idade: { minimo: 15, maximo: 160 },
-          peso: { minimo: 50, maximo: 80 },
-          linguas_importantes: [ "comum" ],
-          linguas: []
+          detalhes: [
+            'Meio-elfos tem 30% de proteção contra Sono e magias de Encantar.',
+            'A infravisão dos meio-elfos permite-lhes enxergar a 20 metros na escuridão.',
+            'Estar a 3 metros de distância de uma porta oculta (escondida por cortinas, etc.) dá ao meio-eito uma chance em seis (1 em 1d6) de localizá-la.',
+            'Ao se esforçar para descobrir, ele terá uma chance em três (1-2 em 1d6) de localizar uma porta secreta (construida para ser indetectável) e uma chance em duas (1-3 em 1d6) de encontrar uma porta oculta (escondida por cortinas, etc.).'
+          ],
+          altura: { "Masculino": { minimo: 1.52, maximo: 1.82 }, "Feminino": { minimo: 1.47, maximo: 1.77 }},
+          idade: { minimo: 15, maximo: 185 },
+          peso: { "Masculino": { minimo: 55, maximo: 73 }, "Feminino": { minimo: 42, maximo: 60 }},
+          linguas_importantes: [ "comum", "élfico" ],
+          linguas: [ "dos gnomos", "dos halflings", "dos goblins", "dos hobgloblins", "dos orcs", "dos gnolls" ]
         },
         "Halfling": {
           "Força": { minimo: 7, maximo: 18 },
@@ -227,13 +264,17 @@
           "Carisma": { minimo: 3, maximo: 18 },
           ajustes: { "Destreza": 1, "Força": -1 },
           detalhes: [
-            'Halflings não jogam os dados para obter Força Extraordinária.'
+            'Halflings não jogam os dados para obter Força Extraordinária.',
+            'Halflings têm uma grande resistência à magia. Para cada 33½  pontos de Constituição, o personagem ganha um bônus de resistênaade + 1 contra varinhas de condão, baStões, cajados e magias.',
+            'Possuem resistência contra venenos. Seus testes de resistência contra veneno possuem bônus +1 para cada 3½ pontos de Constituição.',
+            'Halflings ganham um bônus de +l em suas jogadas de ataque sempre que estiverem usando armas de arremesso e fundas.',
+            'Um halfling pode obter bônus de Surpresa contra seus oponentes, mas somente se não estiver usando armadura de metal. Mesmo assim, o halfling precisa estar sozinho, ou num grupo formado só de elfos ou halflings (que também não podem usar armaduras de metal), ou, no mínimo, a 30 metros de seus companheiros para ganhar o bônus. Se o halfling cumprir essas condições, os oponentes sofrerão uma penalidade de -4 em testes de Surpresa. Se uma porta ou um obstáculo precisar ser transposto, a penalidade reduz-se para -2.',
           ],
-          altura: { minimo: 1.10, maximo: 1.40 },
-          idade: { minimo: 20, maximo: 150 },
-          peso: { minimo: 30, maximo: 50 },
-          linguas_importantes: [ "comum" ],
-          linguas: []
+          altura: { "Masculino": { minimo: 0.81, maximo: 1.21 }, "Feminino": { minimo: 0.76, maximo: 1.16 }},
+          idade: { minimo: 20, maximo: 200 },
+          peso: { "Masculino": { minimo: 26, maximo: 46 }, "Feminino": { minimo: 24, maximo: 44 }},
+          linguas_importantes: [ "comum", "dos halflings" ],
+          linguas: [ "dos anões", "élfico", "dos gnomos", "dos goblins", "dos orcs" ]
         }
       };
 
@@ -430,6 +471,11 @@
         callback(resultado);
       }
 
+      function rolar1d100(callback) {
+        let resultado = Math.floor(Math.random() * 100) + 1;
+        callback(resultado);
+      }
+
       function rolar3d6(callback) {
         rolar1d6(dado1 => {
           rolar1d6(dado2 => {
@@ -454,6 +500,7 @@
                       "Tendência": '',
                       "Dados Básicos": {
                         "Dados de Vida": 0,
+                        "Gênero": '',
                         "Idade": 0,
                         "Altura": 0,
                         "Peso": 0
@@ -465,7 +512,8 @@
                         "Inteligência": { "Valor da Habilidade": inteligencia },
                         "Sabedoria": { "Valor da Habilidade": sabedoria },
                         "Carisma": { "Valor da Habilidade": carisma },
-                      }
+                      },
+                      "Detalhes": []
                     });
                   });
                 });
@@ -506,11 +554,35 @@
 
       }
 
+      function ajustar_nome_raca(personagem) {
+        let raca = personagem["Raça"];
+        if ( (raca.indexOf('Elfo') > -1) || (raca.indexOf('Drow') > -1) ) {
+          raca = 'Elfo';
+        }
+        if (raca.indexOf('Halfling') > -1) {
+          raca = 'Halfling';
+        }
+        return raca;
+      }
+
       function sortear_raca(personagem, callback) {
         validar_habilidades(personagem, racas => {
           let index = Math.floor(Math.random() * racas.length);
           let raca = racas[index];
           personagem["Raça"] = raca;
+
+          if (raca == "Elfo") {
+            let racas_elficas = [
+              'Elfo (Alto-Elfo)', 'Elfo (Alto-Elfo)', 'Elfo (Alto-Elfo)', 'Elfo (Alto-Elfo),',
+              'Elfo Aquático', 'Elfo Cinzento', 'Elfo da Floresta', 'Drow'
+            ];
+            personagem["Raça"] = racas_elficas[Math.floor(Math.random() * racas_elficas.length)];
+          }
+
+          if (raca == "Halfling") {
+            let racas_halflings = [ 'Halfling Pespeludos', 'Halfling Tiposaltos', 'Halfling Robustos' ];
+            personagem["Raça"] = racas_halflings[Math.floor(Math.random() * racas_halflings.length)];
+          }
 
           let ajustes = Object.keys(RACAS[raca].ajustes);
           if (ajustes.length == 0) {
@@ -568,7 +640,7 @@
           let classe_permitida = false;
 
           keys_racas.forEach((raca, index_classe_permitida) => {
-            if (personagem["Raça"] == raca) {
+            if (ajustar_nome_raca(personagem) == raca) {
               classe_permitida = true;
             }
 
@@ -702,22 +774,32 @@
 
       function sortear_dados_basicos(personagem, callback) {
         let classe = ajustar_nome_classe(personagem);
-        let raca = personagem["Raça"];
+        let raca = ajustar_nome_raca(personagem);
 
         let vida = Math.floor(Math.random() * CLASSES[classe].dado_de_vida) + 1;
         personagem["Dados Básicos"]["Dados de Vida"] = vida;
 
-        let ajuste_altura = RACAS[raca].altura.maximo - RACAS[raca].altura.minimo;
-        let altura = (Math.random() * ajuste_altura) + RACAS[raca].altura.minimo;
+        let generos = [ 'Masculino' , 'Feminino' ];
+        let genero = generos[Math.floor(Math.random() * 2)];
+        personagem["Dados Básicos"]["Gênero"] = genero;
+
+        let ajuste_altura = RACAS[raca].altura[genero].maximo - RACAS[raca].altura[genero].minimo;
+        let altura = (Math.random() * ajuste_altura) + RACAS[raca].altura[genero].minimo;
         personagem["Dados Básicos"]["Altura"] = altura.toFixed(2);
 
         let ajuste_idade = RACAS[raca].idade.maximo - RACAS[raca].idade.minimo;
         let idade = Math.floor(Math.random() * ajuste_idade) + RACAS[raca].idade.minimo;
         personagem["Dados Básicos"]["Idade"] = idade;
 
-        let ajuste_peso = RACAS[raca].peso.maximo - RACAS[raca].peso.minimo;
-        let peso = (Math.random() * ajuste_peso) + RACAS[raca].peso.minimo;
+        let ajuste_peso = RACAS[raca].peso[genero].maximo - RACAS[raca].peso[genero].minimo;
+        let peso = (Math.random() * ajuste_peso) + RACAS[raca].peso[genero].minimo;
         personagem["Dados Básicos"]["Peso"] = peso.toFixed(2);
+
+        personagem["Detalhes"] = RACAS[raca].detalhes;
+
+        if (personagem["Raça"] == 'Halfling Robustos') {
+
+        }
 
         callback();
       }
